--- a/tutorial/jspdemo/WebContent/student-checkbox-form.html
+++ b/tutorial/jspdemo/WebContent/student-checkbox-form.html
@@ -13,6 +13,8 @@
 	Last name: <input type="text" name="lastName" />
 	
 	<br/><br/>
+	
+	Favorite Programming Language: <br/>
 
 	<input type="checkbox" name="favoriteLanguage" value="Java"> Java
 
